--- a/style.css
+++ b/style.css
@@ -13,12 +13,15 @@ img {
 body {
 	font-family: 'Kumbh Sans';
 	margin: 0 auto;
-	background: hsl(185, 75%, 39%);
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	height: 100vh;
 	max-width: 1440px;
+	background: url(./images/bg-pattern-top.svg) -65% 200% no-repeat,
+		url(./images/bg-pattern-bottom.svg) 160% -125% no-repeat;
+	background-size: 70%, 70%;
+	background-color: hsl(185, 75%, 39%);
 }
 
 .wrapper {
